swagger models (super big brain hak)
